<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:backgroundTint="#e1f5fe"
    android:orientation="vertical"
    android:overScrollMode="never"
    tools:context=".fragments.AboutFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:elevation="4dp"
            android:src="@drawable/profile" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_profile"
            android:layout_marginStart="8dp"
            android:layout_marginTop="-60dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/aladin"
                    android:letterSpacing="0.3"
                    android:text="@string/profile_name"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/crimson_text_italic"
                    android:justificationMode="inter_word"
                    android:letterSpacing="0.1"
                    android:lineSpacingExtra="3dp"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_show_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_blue_dark"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="12sp"
                    tools:text="View More"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_about_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_detail"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="12dp"
            app:cardElevation="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:drawableEnd="@drawable/ic_next_24dp"
                android:drawableStart="@drawable/ic_about_me"
                android:drawablePadding="24dp"
                android:padding="16dp"
                android:text="@string/about_me"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_merchandise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_about_me"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="12dp"
            app:cardElevation="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:drawableEnd="@drawable/ic_next_24dp"
                android:drawableStart="@drawable/ic_shopping_cart"
                android:drawablePadding="24dp"
                android:padding="16dp"
                android:text="@string/shop_merchandise"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_merchandise"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="12dp"
            app:cardElevation="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:drawableEnd="@drawable/ic_next_24dp"
                android:drawableStart="@drawable/ic_rate_us"
                android:drawablePadding="24dp"
                android:padding="16dp"
                android:text="@string/rate_us"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_rate"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="12dp"
            app:cardElevation="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:drawableEnd="@drawable/ic_next_24dp"
                android:drawableStart="@drawable/ic_share"
                android:drawablePadding="24dp"
                android:padding="16dp"
                android:text="@string/share"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</ScrollView>